fix overflow

--- a/src/play-now/style.css
+++ b/src/play-now/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #171717;
     color: white;
     user-select: none;
+    overflow: hidden;
 }
 
 
